# CompShortStory

./: Cargo.toml  README.md  Shuttle.toml
assets/: main.css  main.js
src/: main.rs
templates/: base.html.tera  error.html.tera  index.html.tera
