[package]
name = "compstory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
rocket = { version = "0.5.0", features = ["tls", "json"] }
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.26.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars","tera"]