[package]
name = "compshortstory"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
rocket = { version = "0.5.1", features = ["tls", "json"] }
shuttle-rocket = "0.52.0"
shuttle-runtime = "0.52.0"
rocket_cors = "0.6.0"
tokio = "1.26.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.9"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars","tera"]